--- a/server/.env
+++ b/server/.env
@@ -3,3 +3,7 @@ DATABASE_PORT=3306
 DATABASE_NAME=nest
 DATABASE_USERNAME=root
 DATABASE_PASSWORD=123456
+
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_DB=0
