--- a/server/.env
+++ b/server/.env
@@ -7,3 +7,8 @@ DATABASE_PASSWORD=123456
 REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_DB=0
+
+EMAIL_HOST=xxx
+EMAIL_PORT=xxx
+EMAIL_ACCOUNT=xxx
+EMAIL_PASSWORD=xxx
